--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,19 @@
-h1 {
-  font-family: "playfair display" sans-serif;
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "playfair display", serif;
+  --default-font-family: "poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
+}
+
+h1.h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
 
@@ -7,4 +21,30 @@ p {
   font-family: "poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
+}
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-size: 34px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+.hero h2 {
+  font-family: "poppins", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+  font-size: 24px;
+}
+.btn-branding {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
