--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,11 +16,14 @@ h6 {
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
+h2 {
+  font-size: 64px;
+}
 
 p {
-  font-family: "poppins", sans-serif;
-  font-weight: 500;
+  font-size: 16px;
   font-style: normal;
+  line-height: 30px;
 }
 .hero {
   background-color: var(--secondary-color);
@@ -44,6 +47,14 @@ p {
   background-color: var(--branding-color);
   border-radius: 4px;
   color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
