--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,11 +18,12 @@ h6 {
 }
 h2 {
   font-size: 64px;
+  line-height: 1.5;
 }
 
 p {
-  font-size: 16px;
-  font-style: normal;
+  font-size: 10px;
+  font-style: light;
   line-height: 30px;
 }
 .hero {
@@ -40,7 +41,7 @@ p {
   font-family: "poppins", sans-serif;
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
   font-size: 24px;
 }
 .btn-branding {
@@ -58,4 +59,22 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.project-description {
+  padding: 120px 60px;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 60px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
