added </div> before the paragraph

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,8 +22,8 @@ h2 {
 }
 
 p {
-  font-size: 10px;
-  font-style: light;
+  font-size: 16px;
+  font-style: normal;
   line-height: 30px;
 }
 .hero {
