--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,57 +1,87 @@
 :root {
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
-  --heading-font-family: "playfair display", serif;
-  --default-font-family: "poppins", sans-serif;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
+
 body {
   font-family: var(--default-font-family);
 }
 
-h1.h2,
+h1,
+h2,
 h3,
 h4,
 h5,
 h6 {
+  color: black;
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
-h2 {
-  font-size: 64px;
+
+h1 {
+  font-size: 96px;
   line-height: 1.5;
 }
 
+h2 {
+  font-size: 64px;
+}
+
 p {
+  font-weight: normal;
   font-size: 16px;
-  font-style: normal;
   line-height: 30px;
 }
+
 .hero {
-  background-color: var(--secondary-color);
+  background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
 }
+
 .hero p {
-  font-size: 34px;
+  font-size: 36px;
   font-weight: bold;
   margin: 0;
   color: #272142;
 }
+
 .hero h2 {
-  font-family: "poppins", sans-serif;
+  font-family: var(--heading-font-family);
   font-weight: normal;
-  font-size: 24px;
   line-height: 1.5;
   font-size: 24px;
 }
+
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
 .btn-branding {
-  background-color: var(--branding-color);
+  background: var(--branding-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
 }
+
 .btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
@@ -60,20 +90,31 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
-.project-description {
+
+.project-desciption {
   padding: 120px 60px;
 }
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
+    line-height: 56px;
   }
+
   h2 {
     font-size: 44px;
   }
+
   .hero {
-    padding: 80px 60px;
+    padding: 80px 20px;
   }
-  .project-description {
+
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
+
+  .project-desciption {
     padding: 0;
     text-align: center;
   }
