--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,7 +101,33 @@ p {
 .project-desciption {
   padding: 120px 60px;
 }
+.logo {
+  max-width: 150px;
+}
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 44px;
+  margin-left:15px;
+}
 
+nav a{
+  text-decoration: none;
+  color:#272142
+}
+nav a:hover,
+nav li.active a
+{
+  color:  var(--branding-color):
+  transition:all 150ms ease-in-out;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
