--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,6 +29,9 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
 p {
   font-weight: normal;
   font-size: 16px;
@@ -115,19 +118,54 @@ nav li {
   display: inline;
   list-style: none;
   line-height: 44px;
-  margin-left:15px;
+  margin-left: 15px;
 }
 
-nav a{
+nav a {
   text-decoration: none;
-  color:#272142
+  color: #272142;
 }
 nav a:hover,
-nav li.active a
-{
-  color:  var(--branding-color):
-  transition:all 150ms ease-in-out;
+nav li.active a {
+  color: var(--branding-color);
+  transition: all 150ms ease-in-out;
 }
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 150ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -138,6 +176,9 @@ nav li.active a
     font-size: 44px;
   }
 
+  h4 {
+    font-size: 26px;
+  }
   .hero {
     padding: 80px 20px;
   }
